--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   pin_input_text_field: ^4.5.1
+  font_awesome_flutter: ^10.6.0
 
 dev_dependencies:
   flutter_test:
