--- a/capstone_project/pubspec.yaml
+++ b/capstone_project/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^1.0.4
   dotted_border: ^2.1.0
   flutter_svg: ^2.0.9
+  flutter_svg_provider: ^1.0.6
   email_validator: ^2.1.17
   connectivity: ^3.0.6
   flutter_rating_bar: ^4.0.1
